# unxml-rs

./: .gitignore  ANGULAR_CONTROL_FLOW_GUIDE.md  CLAUDE.md  Cargo.toml  README.md  TEST_SUITE_README.md  angular-output-pug.txt  angular-output.txt  preprocess-angular.py  pyproject.toml  test-angular-clean.html  test-angular-simple.html  test-baseline.json  test-suite.py  test.html
.cursor/rules/: rust-format-lint.mdc
.github/workflows/: ci.yml  release.yml
demo/: README.md  e2b-invoice-interchange-v3p4.xsd.pug  finvoice-3.0.xsd.pug  finvoice-3.0.xsd.unxml  peppol-common-basic-components.xsd.pug  publish-to-demo-site.py  ubl-common-aggregate-components-2.1.xsd.pug  ubl-common-basic-components-2.1.xsd.pug
demo/ubl/: cac.xsd.pug  cct.xsd.pug  cec.xsd.pug  invoice.xsd.pug  qdt.xsd.pug  udt.xsd.pug  udt.xsd.unxml
docs/: msbuild.md  reference.md  schematron.md  xsd.md  xslt.md
editor/: README.md  install-editor-support.py  unxml.sublime-syntax
editor/vscode/: language-configuration.json  package.json
editor/vscode/syntaxes/: unxml.tmLanguage.json
expected-output/: angular-control-flow-rust.html.pug  angular-control-flow.html.pug  angular-control-flow.html.unxml  angular-marked.html.pug  angular-marked.html.unxml  cii-invoice.xml.unxml  collapse-only-ubl.xml.unxml  collapse-wrappers.xml.unxml  complex.html.pug  complex.html.txt  complex.html.unxml  complex.xml.pug  complex.xml.txt  complex.xml.unxml  config.xml.pug  config.xml.txt  data.xml.pug  data.xml.txt  empty.xml.pug  form.html.pug  form.html.txt  form.html.unxml  inline-comments.xml.unxml  inline-mixed.xml.unxml  malformed.xml.pug  msbuild-constructs.targets.unxml  msbuild-sniff-negative.xml.unxml  msbuild-sniff-project.xml.unxml  namespace.xml.pug  namespace.xml.txt  namespace.xml.unxml  schematron-comments.sch.unxml  schematron-constructs.sch.unxml  select-fragments.xml.unxml  simple.html.pug  simple.html.txt  simple.html.unxml  simple.xml.pug  simple.xml.txt  simple.xml.unxml  (+20 more)
sample-output/: complex.xml  config.xml  data.xml  malformed.xml  namespace.xml  simple.xml
skills/unxml/: SKILL.md
src/: canonical.rs  cli.rs  document.rs  highlight.rs  install.rs  main.rs  model.rs  msbuild.rs  parse.rs  paths.rs  process.rs  render.rs  schematron.rs  types.rs  wsdl.rs  xsd.rs  xslt.rs
test-input/: angular-control-flow.html  angular-marked.html  cii-invoice.xml  collapse-only-ubl.xml  collapse-wrappers.xml  complex.html  config.xml  empty.xml  form.html  inline-comments.xml  inline-mixed.xml  msbuild-constructs.targets  msbuild-sniff-negative.xml  msbuild-sniff-project.xml  sample.sch  schematron-comments.sch  select-fragments.xml  simple.html  special-elements.xml  toplevel-comments.xml  ubl-invoice.xml  ubl-transform.xsl  wsdl-asmx-dualbinding.wsdl  wsdl-comments.wsdl  wsdl-stockquote.wsdl  wsdl-wcf-orders.wsdl  xsd-anonymous.xsd  xsd-comments.xsd  xsd-constructs.xsd  xslt-constructs.xsl  xslt-mixed-text.xsl  xslt2-constructs.xsl  xslt3-constructs.xsl  xslt3-package.xsl
test-input/schematron/: CEN-EN16931-UBL.pug  PEPPOL-EN16931-UBL.pug  README.md
tests/: e2e_test.rs  expand_test.rs  inline_test.rs
tests/fixtures/: main.xsl  shared.xsl
