[package]
name = "unxml"
version = "1.0.0"
edition = "2024"
description = "Unxml 'pretty-prints' xml files in light, yaml-like, readable format"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/unxml-rs"
readme = "README.md"
keywords = ["xml", "yaml", "pretty-print", "cli", "parser"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
quick-xml = "0.36"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
