[package]
name = "unxml"
# Placeholder only — the real version is injected from the git tag at release
# time (`cargo set-version` in release.yml). Never edit this by hand; releases
# are cut with `gh release create vX.Y.Z`, which creates the tag.
version = "0.0.0-dev"
edition = "2024"
description = "Unxml 'pretty-prints' xml and html files in light, yaml-like, readable format"
authors = ["Ville Vainio <vivainio@gmail.com>"]
license = "MIT"
repository = "https://github.com/vivainio/unxml-rs"
readme = "README.md"
keywords = ["xml", "html", "yaml", "pretty-print", "cli", "parser"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
quick-xml = "0.36"
scraper = "0.20"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
include_dir = "0.7"
